--- a/blog/notes/2025/03/20250319-博客和个人简历搭建之旅.md
+++ b/blog/notes/2025/03/20250319-博客和个人简历搭建之旅.md
@@ -1,7 +1,7 @@
 ---
-cover: /assets/images/cover2.jpg
+cover: http://cloud.myxz.fun//blog/20250320145041525.png
 icon: pen-to-square
-date: 2025-03-19
+date: 2025-03-20
 category:
   - 系统部署
 tag:
@@ -13,10 +13,168 @@ sticky: true
 
 # 博客和个人简历搭建之旅
 
-## 标题 2
+## 一、前期准备
 
-这里是内容。
+1、首先你得有一个域名（没有也行）
 
-### 标题 3
+2、一个GitHub账号 [GitHub](https://github.com/)
 
-这里是内容。
+- 账号注册我就不多说了自己百度也能注册出来（算了我还是写一下）
+
+- 第一步打开GitHub网站：（可能需要使用到科学上网）
+
+  ![GitHub注册页](http://cloud.myxz.fun//blog/20250320151440745.png)
+
+- 如果打不开可以暂时使用瓦特工具箱[瓦特工具箱(Steam++官网) - Watt Toolkit](https://steampp.net/) 这里我就不多介绍了自行研究
+
+- 在这里输入你的常用邮箱
+
+- 然后根据提示填写信息即可
+
+- 完成后应该像这样
+
+- ![GitHub首页](http://cloud.myxz.fun//blog/20250320152226012.png)
+
+- 注：如果是因为科学上网的问题可以直接给我发邮件
+
+3、一个Cloudflare账号 [Cloudflare](https://www.cloudflare.com/)
+
+- 这里建议百度（算了写一下）
+
+- 首先打开官网
+
+- ![cloudflare首页](http://cloud.myxz.fun//blog/20250320152755240.png)
+
+  点击免费开始使用，根据要求填写信息即可
+
+  ![注册页面](http://cloud.myxz.fun//blog/20250320153005936.png)
+
+  这里我使用的是谷歌（需要科学上网）如果你也需要可以发邮件咨询我
+
+4、Git [Git - Downloads](https://git-scm.com/downloads)
+
+根据你的系统进行选择下载双击安装即可
+
+![Git下载](http://cloud.myxz.fun//blog/20250320154441168.png)
+
+5、足够的耐心（很重要）
+
+好嘞下面我们就开始搓~~
+
+## 二、个人博客搭建
+
+![个人博客封面](http://cloud.myxz.fun//blog/20250320145041525.png)
+
+- 在完成前期准备后就可以开始部署啦
+
+1、首先点击博客首页中对应的GitHub项目进入项目页
+
+![博客首页](http://cloud.myxz.fun//blog/20250320153454425.png)
+
+[China-MY/MYXZ-Blog: MYXZ-Blog](https://github.com/China-MY/MYXZ-Blog)
+
+![项目页](http://cloud.myxz.fun//blog/20250320154034419.png)
+
+帮我点一个star，之后点击code复制项目链接![复制项目链接](http://cloud.myxz.fun//blog/20250320154156304.png)
+
+- 我们在一个盘符下新建一个文件夹
+
+![新建文件夹](http://cloud.myxz.fun//blog/20250320154703132.png)
+
+![打开cmd](http://cloud.myxz.fun//blog/20250320154736141.png)
+
+在cmd中输入以下命令用来克隆我的仓库
+
+```
+git clone https://github.com/China-MY/MYXZ-Blog.git
+```
+
+![克隆仓库](http://cloud.myxz.fun//blog/20250320154817037.png)
+
+![成功克隆](http://cloud.myxz.fun//blog/20250320154847161.png)
+
+- 这里我们可以修改一下自己的文件夹名称用自己喜欢的名字即可
+
+  ![文件夹名称](http://cloud.myxz.fun//blog/20250320154954146.png)
+
+这里要注意的是如果要搭建自己的博客你需要将隐藏文件打开
+
+![打开隐藏文件](http://cloud.myxz.fun//blog/20250320155139099.png)
+
+确保这个是打开的
+
+之后将文件夹中的.git和.idea目录删除
+
+![删除目录](http://cloud.myxz.fun//blog/20250320155301272.png)
+
+之后就可以使用vscode打开这个项目进行编辑啦
+
+至于怎么配置怎么编辑请看官方文档
+
+[主页 | vuepress-theme-hope](https://theme-hope.vuejs.press/zh/)
+
+编辑完成后可以使用vscode中的git管理进行初始化仓库和推送到自己的仓库
+
+![编辑完成后](http://cloud.myxz.fun//blog/20250320155703250.png)
+
+在推送到GitHub后你就会拥有像这样的一个页面
+
+![推送后的仓库](http://cloud.myxz.fun//blog/20250320155820065.png)
+
+下面我们开始部署
+
+这里我使用了 [随时随地连接、保护、构建 | Cloudflare](https://www.cloudflare.com/zh-cn/) 进行部署
+
+在我们注册好cloudflare后我们点击
+
+![部署静态网](http://cloud.myxz.fun//blog/20250320160123319.png)
+
+我们点击创建，选择pages 其次点击连接到git
+
+![创建](http://cloud.myxz.fun//blog/20250320160211300.png)
+
+之后选择GitHub进行关联登录
+
+![连接GitHu](http://cloud.myxz.fun//blog/20250320160311812.png)
+
+坚持一下，到这里选择你刚刚的仓库
+
+![选择你的仓库](http://cloud.myxz.fun//blog/20250320160420152.png)
+
+在点击开始设置
+
+![配置上部分](http://cloud.myxz.fun//blog/20250320160524969.png)
+
+![配置中](http://cloud.myxz.fun//blog/20250320160549287.png)
+
+最后点击保存部署即可
+
+![保存部署](http://cloud.myxz.fun//blog/20250320160633307.png)
+
+之后他会给你一个连接，通过链接你就可以访问你的博客网站啦~
+
+![链接](http://cloud.myxz.fun//blog/20250320160825543.png)
+
+不过这里我建议你绑定自己的域名
+
+![绑定域名](http://cloud.myxz.fun//blog/20250320160912337.png)
+
+至此博客搭建就已经结束了，相关配置可以参考官方文档
+
+## 三、个人在线简历搭建
+
+![个人在线简历封面](http://cloud.myxz.fun//blog/20250320145209167.png)
+
+整体流程和上面一样
+
+```
+git clone https://github.com/China-MY/Yu-Luo-Resume
+```
+
+- 这里我给出构建配置
+
+![个人简历配置](http://cloud.myxz.fun//blog/20250320161145933.png)
+
+
+
+如果有问题的话欢迎评论~
