--- a/blog/about/追剧/0-张若昀.md
+++ b/blog/about/追剧/0-张若昀.md
@@ -1,21 +1,20 @@
 ---
-cover: /assets/images/cover2.jpg
+cover: https://c-ssl.duitang.com/uploads/blog/202102/16/20210216220630_57545.jpg
 icon: pen-to-square
 date: 2025-03-19
 category:
-  - 没想好
+  - 张若昀
 tag:
-  - 没想好
+  - 张若昀
 star: false
 sticky: true
 ---
 
 # 张若昀的剧
 
-## 标题 2
+## 好剧推荐
 
-这里是内容。
-
-### 标题 3
-
-这里是内容。
+- [庆余年](https://baike.baidu.com/item/庆余年/18023915?fromModule=lemma_inlink)
+- [庆余年第二季](https://baike.baidu.com/item/庆余年第二季/56056469?fromModule=lemma_inlink)
+- [雪中悍刀行](https://baike.baidu.com/item/雪中悍刀行/20140323?fromModule=lemma_inlink)
+- 未完待续……
