--- a/blog/about/音乐/0-薛之谦.md
+++ b/blog/about/音乐/0-薛之谦.md
@@ -1,21 +1,18 @@
 ---
-cover: /assets/images/cover2.jpg
+cover: https://c-ssl.duitang.com/uploads/item/201902/13/20190213194407_akvyz.thumb.1000_0.jpg
 icon: pen-to-square
 date: 2025-03-19
 category:
-  - 没想好
+  - 薛之谦
 tag:
-  - 没想好
+  - 薛之谦
 star: false
 sticky: true
 ---
 
 # 薛之谦的歌单
 
-## 标题 2
+- [认真的雪](https://baike.baidu.com/item/认真的雪/6488943?fromModule=lemma_inlink)
 
-这里是内容。
-
-### 标题 3
-
-这里是内容。
+- 演员
+- 未完待续……
