--- a/blog/posts/前端技术/0-前端三剑客.md
+++ b/blog/posts/前端技术/0-前端三剑客.md
@@ -1,21 +1,27 @@
 ---
-cover: /assets/images/cover2.jpg
+cover: https://img-blog.csdnimg.cn/882d8cf8221c4187980b6c60068e61cc.png
 icon: pen-to-square
 date: 2025-03-19
 category:
-  - 没想好
+  - 前端
 tag:
-  - 没想好
+  - HTML
+  - JavaScript
+  - CSS
 star: false
 sticky: true
 ---
 
 # 前端三剑客
 
-## 标题 2
+## 1、HTML
 
-这里是内容。
+- 这里可以看 【【首发】1小时学会网页制作 HTML+CSS web前端大学生期末作业】 ：https://www.bilibili.com/video/BV1yo4y167As/?share_source=copy_web&vd_source=77aa9a06e35f59fb1786a9b25642acd9
 
-### 标题 3
+## 2、JavaScript
 
-这里是内容。
+- 这里可以看【30分钟学会JS核心语法 前端速成必看 快来学习吧】 https://www.bilibili.com/video/BV1Z84y1K7jG/?share_source=copy_web&vd_source=77aa9a06e35f59fb1786a9b25642acd9
+
+## 3、CSS
+
+- 这里可以看【1小时CSS速成上篇 前端必备技能】 https://www.bilibili.com/video/BV17X4y1d7mT/?share_source=copy_web&vd_source=77aa9a06e35f59fb1786a9b25642acd9
