--- a/blog/posts/安全技术/0-永恒之蓝ms17_010.md
+++ b/blog/posts/安全技术/0-永恒之蓝ms17_010.md
@@ -30,7 +30,7 @@ MS17_010漏洞利用与安全加固（永恒之蓝）
 
 ![ping通](http://cloud.myxz.fun//blog/20250321163512998.png)
 
-![image-20250321163319897](C:\Users\17929\AppData\Roaming\Typora\typora-user-images\image-20250321163319897.png)
+![ping](http://cloud.myxz.fun//blog/20250321164611579.png)
 
 环境弄好了，正文开始！172.16.17.0
 
@@ -72,7 +72,7 @@ run //开始运行即开始执行扫描
 
 6.执行扫描过后，结果如下所示，从结果中可以看到在当前扫描的网段中存在一个windows 7版本的操作系统存在ms17-010漏洞。（192.168.6.135就是window 7的IP）
 
-![image-20250321163419199](C:\Users\17929\AppData\Roaming\Typora\typora-user-images\image-20250321163419199.png)
+![打他](http://cloud.myxz.fun//blog/20250321164632624.png)
 
 192.168.32.136:445 - Host is likely VULNERABLE to MS17-010! - Windows 7 Ultimate 7601 Service Pack 1 x64 (64-bit)
 
