--- a/blog/notes/2025/03/20250401-雷军思想.md
+++ b/blog/notes/2025/03/20250401-雷军思想.md
@@ -9,7 +9,7 @@ tag:
 star: true
 sticky: true
 ---
-
+# 雷军的成功逻辑体系：长期主义与极致执行的融合
 雷军在近期武汉大学“雷军班”主题班会及公开演讲中，围绕个人成长与创业方法论，提炼出以下核心观点，形成了一套可复制的成功逻辑体系：
 
 ### 1. **高目标牵引：突破思维天花板**
