--- a/blog/notes/2025/03/20250401-雷军思想.md
+++ b/blog/notes/2025/03/20250401-雷军思想.md
@@ -1,5 +1,5 @@
 ---
-cover: http://cloud.myxz.fun//blog/20250321085022194.png
+cover: http://icloud.xn--2hv178e.top///blog/20250321085022194.png
 icon: pen-to-square
 date: 2025-04-01
 category:
